@version $Id$

* 2.0.2 to be released 2007-12-??

    2007-12-05
    * L2CAP, RFCOMM and OBEX server on Mac OS X

    2007-11-28
    * RFCOMM and L2CAP client on Mac OS X

    2007-11-19
    * WIDCOMM use BTW-6_1_0_1501-SDK, Fixed Service Attributes BOOLEAN, U_INT_8, INT_8, INT_16 and UINT_16

    2007-11-16
    * Fixed Service Attributes STRING to be UTF8

    2007-11-05
    * Started OS X development base on Eric Wagner code and with consultation by Bea Lam

    2007-10-24
    * OBEX read timeout. Throws InterruptedIOException when Connector.open(,,true) is used

    2007-10-04
    * fixed initialization exceptions, e.g. BluetoothStateException when device is not ready or no stack found
    * No need for WTK to run the build.

    2007-09-09
    * connection and stream close() functions will work according to specification.

    2007-09-04
    * for J9 -Dmicroedition.connection.pkgs=com.intel.bluetooth is optonal when bluecove.jar installed to "%J9_HOME%\lib\jclMidp20\ext\

    2007-08-28
    * log4j integration, Bluecove log redirected to log4j when one is available in classpath

* 2.0.1 released 2007-08-28

    2007-08-24
    * Full OBEX over RFCOMM and TCP
    * Bluetooth_1-1_006_TCK on WIDCOMM, Pass 513, Fail 19. (some security features not implemented)
    * Review javadocs

    2007-07-22 Vlad Skarzhevskyy
    * L2CAP implementation, Only on WIDCOMM stack
    * Bluetooth_1-1_005_TCK on WIDCOMM, Pass 322, Fail 3. (security not tested)

    2007-07-15 Vlad Skarzhevskyy
    * Use TCK for JSR 82 for tests, fixed major incompatibility problems

* 2.0.0 released 2007-07-05

    2007-06-29 Vlad Skarzhevskyy
    * OBEX PUT over rfcomm and tcp  (btgoep and tcpobex)

    2007-06-22 Vlad Skarzhevskyy
    * Merged J9 MIDP compatibility enhancements suggested by Kobus Grobler
    * bluecove_ce.dll WIDCOMM Stack on WinCE

    2007-06-20 Vlad Skarzhevskyy
    * Published version 2.0.0-b2